fix: progress bar visibility behaviour

--- a/upload-blocks/ProgressBar/progress-bar.css
+++ b/upload-blocks/ProgressBar/progress-bar.css
@@ -7,22 +7,26 @@ uc-progress-bar {
   bottom: 0;
   width: 100%;
   height: 100%;
-  opacity: 1;
   overflow: hidden;
 }
 
 uc-progress-bar .progress {
+  opacity: 1;
+  transition: width 0.6s, opacity 0.3s;
   background-color: var(--clr-accent-light);
-  transition: width 0.6s;
   transform: translateX(0);
   width: calc(var(--l-width) * 1%);
   height: 100%;
 }
 
-uc-progress-bar .unknown {
+uc-progress-bar .progress--unknown {
   width: 100%;
   animation: indeterminateAnimation 1s infinite linear;
   transform-origin: 0% 50%;
+}
+
+uc-progress-bar .progress--hidden {
+  opacity: 0;
 }
 
 @keyframes indeterminateAnimation {
